--- a/ITY/project5/Makefile
+++ b/ITY/project5/Makefile
@@ -13,4 +13,4 @@ clean:
 	rm -rfv *.ps *.log *.dvi *.aux *.toc *.nav *.snm $(FILE).pdf *.out *.zip
 
 zip:
-	zip xcoufa09-fit.zip Makefile $(FILE).tex
+		zip xcoufa09-fit.zip Makefile schema-pocitace-sapo.eps $(FILE).tex
